--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 	var purple = [280, 50, 60];
 	var letterColors = [white, purple];
 	drawName(myName, letterColors);
-	if(10 < 3) {bubbleShape = 'square';} else {bubbleShape = 'circle';}
+	if(10 < 3) {
+	bubbleShape = 'square';
+	} else {
+	bubbleShape = 'circle';
+	}
 	bounceBubbles();
     </script>
     <audio autoplay="autoplay">
