--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="/js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="/js/alphabet.js"></script>
-    <script type"text/css">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
+    <style type"text/css">
 	html { 
 	  background: url(background.gif) no-repeat center center fixed; 
 	  -webkit-background-size: cover;
@@ -15,19 +15,8 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
-    <script type="text/javascript" src="/js/bubbles.js">
-    	var myName = "FangedTerror";
-	var white = [277, 277, 277];
-	var purple = [280, 50, 60];
-	var letterColors = [white, purple];
-	drawName(myName, letterColors);
-	if(10 < 3) {
-	bubbleShape = 'square';
-	} else {
-	bubbleShape = 'circle';
-	}
-	bounceBubbles();
-    </script>
+    <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js">
+    <script type="text/javascript" src="/main.js"></script>
     <audio autoplay="autoplay">
         <source src="/song.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
