--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
-    <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js">
+    <script type="text/javascript" src="/js/bubbles.js">
     <script type="text/javascript" src="/main.js"></script>
     <audio autoplay="autoplay">
         <source src="/song.mp3" type="audio/mpeg">
