--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
+    <script type="text/javascript" src="/js/alphabet.js"></script>
     <style type"text/css">
 	html { 
 	  background: url(background.gif) no-repeat center center fixed; 
