--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ transform: translateY(-50%);
 </style>
 </head>
 <body>
-<center><div id="children">Nothing Yet.</div></center>
+<center><div id="children"><h1 align="center">Nothing Yet.</h1></div></center>
 </body>
 </html>
