--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>FangedTerror802</title>
 <style type"text/css">
 html { 
 background: url(http://thecatapi.com/api/images/get?format=src) no-repeat center center fixed; 
@@ -8,12 +9,18 @@ background: url(http://thecatapi.com/api/images/get?format=src) no-repeat center
 -o-background-size: cover;
 background-size: cover;
 }
-.children{
-background: #ffdb4c;
-height: 300px;
+.children {
 position: relative;
 top: 50%;
-transform: translateY(-50%);
+bottom: 50%;
+}
+h1 {
+	font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.3999996185303px;
 }
 </style>
 </head>
