--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@ background: url(http://thecatapi.com/api/images/get?format=src) no-repeat center
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
-}
-.children {
+color: gray;
 position: relative;
 top: 50%;
-bottom: 50%;
+transform: translateY(-50%);
 }
 h1 {
 	font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
@@ -21,10 +20,11 @@ h1 {
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.3999996185303px;
+	color: gray;
 }
 </style>
 </head>
 <body>
-<center><div id="children"><h1 align="center">Nothing Yet.</h1></div></center>
+<center><h1 align="center">Nothing Yet.</h1></center>
 </body>
 </html>
