--- a/index.html
+++ b/index.html
@@ -2,29 +2,12 @@
 <head>
 <title>FangedTerror802</title>
 <style type"text/css">
-html { 
+html {
 background: url(http://thecatapi.com/api/images/get?format=src) no-repeat center center fixed; 
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-color: gray;
-}
-h1 {
-	font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.3999996185303px;
-	color: gray;
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
 }
 </style>
 </head>
 <body>
-<center><h1 align="center">Nothing Yet.</h1></center>
+<center><img src="/image.gif"></center>
 </body>
 </html>
