--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Cool Text Effects Using CSS Text-Shadow</title>
+<title>FangedTerror802</title>
 
 <style type="text/css">
 body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, blockquote {
@@ -122,7 +122,7 @@ body {
 </div>
 
 <div id="inset">
-	<h1>I am a<br />fat-ass<br />lazy-fuck.</h1>
+	<h1>There's Nothing<br />Here Yet.</h1>
 </div>
 
 </body>
